tests/type_errors/addition_is_restricted.sy
type A = foreign

def x
: A -> A
: a = a + a

--+ expected exit status: 7
--+ expected stderr:
--+ > A Foreign type cannot have requirements.
--+ 
--+ A
--+ is not
--+ "{Num}"
--+ 
--+   3| def x
--+      ^^^^^

